# open-scrape-lib

./: .travis.yml  CMakeLists.txt  README.md
include/: Resource.hpp  memory_log.hpp  stdafx.hpp  structs_defines.hpp
include/CCritSec/: CCritSec.hpp
include/CTablemap/: CTablemap.hpp
include/CTransform/: CTransform.hpp  MagicNumbers.hpp
include/CTransform/hash/: lookup3.hpp  stdint.hpp
include/CTransform/pdiff/: CompareArgs.hpp  LPyramid.hpp  Metric.hpp  RGBAImage.hpp
integration/: OpenScrapeDllExample.au3  ScraperFunctions.au3  example.py
src/: memory_log.cpp  yeux_v2.cpp
src/CTablemap/: CTablemap.cpp
src/CTransform/: CTransform.cpp
src/CTransform/hash/: lookup3.cpp
src/CTransform/pdiff/: CompareArgs.cpp  LPyramid.cpp  Metric.cpp  RGBAImage.cpp
tools/: build-win32-debug.bat  build-win32-release.bat  build-win64-debug.bat  build-win64-release.bat
